--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -43,7 +43,7 @@
               </div>
               <br>
               <div class="text-center">
-                  Already have an account? <a href="/login">Login</a>
+                  Already have an account? <a href="/">Login</a>
               </div>
           </div>
       </div>
