--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -65,18 +65,16 @@
         <div class="card card-profile">
           <div class="card-avatar">
             <a href="javascript:void(0)">
-              <img class="img" src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/384774809_3525695117706735_8931200272697427887_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=OSVtclT8Y0AAX-DwinY&_nc_ht=scontent.ftun8-1.fna&oh=00_AfA_fecyljH3HoHWN1JrpBhDSHMbKIyEwmd60FtTD4KLXg&oe=655544D2" />
+              <img class="img" [src]="user.image" />
             </a>
           </div>
           <div class="card-body">
             <h6 class="card-category text-gray">CEO / Co-Founder</h6>
-            <h4 class="card-title">Dhiflaoui Amira</h4>
+            <h4 class="card-title">{{ user.firstName }}</h4>
             <p class="card-description">
               Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
             </p>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+      
