--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,31 +3,27 @@
         <nav class="pull-left">
             <ul>
                 <li>
-                    <a href="https://www.creative-tim.com">
-                        Creative Tim
+                    <a >
+                        Dhiflaoui Amira
                     </a>
                 </li>
                 <li>
-                    <a href="https://creative-tim.com/about-us">
+                    <a >
                         About Us
                     </a>
                 </li>
                 <li>
-                    <a href="http://blog.creative-tim.com">
+                    <a >
                         Blog
                     </a>
                 </li>
-                <li>
-                    <a href="https://www.creative-tim.com/license">
-                        Licenses
-                    </a>
-                </li>
+              
             </ul>
         </nav>
         <div class="copyright pull-right">
             &copy;
             {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+            <a >Dhiflaoui Amira</a>
         </div>
     </div>
 </footer>
